@@ -11,7 +11,7 @@
 }
 
 \usage{
-save.if(x1, file, verbose = 1)
+save.if(x1, file, compress=TRUE, verbose=1, ...)
 }
 
 \arguments{
@@ -20,9 +20,17 @@ save.if(x1, file, verbose = 1)
   
   \item{file}{
     Where to save. If \code{NULL}, nothing will be saved.}
-  
+
+  \item{compress}{
+    A Boolean or character sent to the \code{\link{save}} function. The default
+    \code{TRUE} leads to compression using gzip. With "xz", maximum
+    compression is obtained in expense of more save and load time.}
+
   \item{verbose}{
-  A numeric determining how much detail will be printed.}
+    A numeric determining how much detail will be printed.}
+
+  \item{...}{
+    Optional arguments to be passed to the \code{\link{save}} function.}
 }
 \value{
   A list including file, and a vector of sizes of the object in memory and on file.}
@@ -31,7 +39,7 @@ save.if(x1, file, verbose = 1)
   Amir Foroushani, and Habil Zare}
 
 \seealso{
-\code{\link{message.if}}
+\code{\link{message.if}}, \code{\link{save}}
 }
 
 \examples{
